# actix_sistema

./: .env  Cargo.toml
src/: main.rs  render.rs  router.rs
src/controllers/: catalogo_controller.rs  error_controller.rs  home_controller.rs  mod.rs  modulo_controller.rs  modulo_generico_controller.rs  perfil_controller.rs  permisos_controller.rs  usuario_controller.rs
src/middleware/: auth_middleware.rs
src/models/: auth.rs  catalogo.rs  menu.rs  mod.rs  modulo.rs  perfil.rs  permiso.rs  usuario.rs
src/services/: catalogo_service.rs  home_service.rs  login_service.rs  mod.rs  modulo_service.rs  perfil_service.rs  permisos_service.rs  usuario_service.rs
src/templates/: carrusel.html  form.html  main.rs  mantenimiento.html  pantalla1.html  pantalla2.html  pantalla3.html  usuarios.html
src/templates/auth/: login.html
src/templates/error/: 404.html
src/templates/home/: index.html  layout.html
src/templates/principal1/: p1_2.html
src/templates/seguridad/: modulo.html  perfil.html  permisos_perfil.html  usuarios.html
static/js/: modulos.js  perfiles.js  permisos.js  users.js
