

[package]
name = "actix_sistema"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework base
actix-web = "4"
# Para manejar la subida de imágenes (Multipart)
actix-multipart = "0.6"
# Para servir las imágenes guardadas y archivos CSS/JS
actix-files = "0.6"

# Base de datos con soporte para fechas (chrono)
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"

# Serialización y utilidades
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] } # Manejo de tiempo para la tabla
uuid = { version = "1.0", features = ["v4"] }     # Para generar nombres de archivo únicos
futures-util = "0.3"                             # Necesario para procesar el flujo de datos del archivo