[package]
name = "actix_sistema"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework base
actix-web = "4"
actix-multipart = "0.6"
actix-files = "0.6"

# Seguridad
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "9.2.0"

# HTTP Client para reCAPTCHA
reqwest = { version = "0.11", features = ["json"] }

# Templates
tera = "1.19"
regex = "1.10"

# Base de datos
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"